﻿Subtitle Edit Changelog


3.5.11 (xth October 2019) BETA
* NEW:
   * Join: Can now append with "add time" - thx Michael/Nickola
   * Add format AWS transcribe json - thx jaccoud
   * Add new subtitle format - thx Zhen
   * Add new subtitle format
   * Run only "Batch convert" in UI via "/batchconvert" - thx 07416
   * Fix mp4 text time codes parsing with 64-bit mdhd/mvhd box - thx DJC
   * Add option to capture top align in OCR - thx teodargent
   * Add support for WebVTT X-TIMESTAMP-MAP - thx laurensscheers/Nickola
* IMPROVED:
   * Update Finish translation - thx Teijo
   * Update Farsi translation - thx ghost1372
   * Update Bulgarian translation - thx kalin
   * Update Brazilian translation - thx Igor
   * Update Catalan translation - thx juansa
   * Update Korean translation - thx domddol
   * Improve FCP/image export frame rate compat - thx Antoine
   * Auto-switch to just downloaded dictionary
   * Allow letters stuck to numbers for Arabic spellcheck - thx OmrSi
   * Improve "Binary OCR" italic detection - thx teodargent
   * Improve WebVTT with <>& - thx lambdacore12
   * Improve batch convert scanning speed - thx stephen147
   * Improve handling of "Structured titles" format - thx Yamato-ua
   * Improve of drawing scene changes - thx OmrSi
   * Improve compatibility for ASS/SSA - thx sneaker_ger
   * Improve compatibility with Linux/Mono - thx shag00/JGoutin/stefano 
   * Add some missing translations - thx Jamakmake
* FIXED:
   * Fix crash + bug in "Fix music notations" - thx paolovador/btsix
   * Fix crash when using "Batch convert" txt to img - thx Alan
   * Fix crash in "Change profile" with no sub - thx OmrSi
   * Fix save file name when "Hide known extension" on - thx jrjordao/Jamakmake
   * Fix subtitle loading issues - thx admas
   * Fix loading of "eng-GB" spell check in OCR - thx AbsenceJam
   * Fix download via TLS issue - thx OmrSi
   * Fix "Overwrite original files" in "Batch convert" - thx Steve