@@ -11,13 +11,14 @@ namespace Nikse.SubtitleEdit.Logic.CommandLineConvert
 {
     public static class TsToBdnXml
     {
-        public static void ConvertFromTsToBdnXml(string fileName, string outputFolder, bool overwrite, StreamWriter stdOutWriter)
+        public static bool ConvertFromTsToBdnXml(string fileName, string outputFolder, bool overwrite, StreamWriter stdOutWriter, CommandLineConverter.BatchConvertProgress progressCallback)
         {
             var tsParser = new TransportStreamParser();
             tsParser.Parse(fileName, (position, total) =>
             {
                 var percent = (int)Math.Round(position * 100.0 / total);
                 stdOutWriter?.Write("\rParsing transport stream: {0}%", percent);
+                progressCallback?.Invoke($"{percent}%");
             });
             stdOutWriter?.Write("\r".PadRight(32, ' '));
             stdOutWriter?.Write("\r");
@@ -39,10 +40,17 @@ namespace Nikse.SubtitleEdit.Logic.CommandLineConvert
             }
             using (var form = new ExportPngXml())
             {
+                if (tsParser.SubtitlePacketIds.Count == 0)
+                {
+                    stdOutWriter?.WriteLine($"No subtitles found");
+                    progressCallback?.Invoke($"No subtitles found");
+                    return false;
+                }
                 foreach (int pid in tsParser.SubtitlePacketIds)
                 {
                     var outputFileName = CommandLineConverter.FormatOutputFileNameForBatchConvert(Utilities.GetPathAndFileNameWithoutExtension(fileName) + "-" + pid + Path.GetExtension(fileName), ".xml", outputFolder, overwrite);
                     stdOutWriter?.WriteLine($"Saving PID {pid} to {outputFileName}...");
+                    progressCallback?.Invoke($"Save PID {pid}");
                     var sub = tsParser.GetDvbSubtitles(pid);
                     var subtitle = new Subtitle();
                     foreach (var p in sub)
@@ -92,6 +100,7 @@ namespace Nikse.SubtitleEdit.Logic.CommandLineConvert
                     form.WriteBdnXmlFile(imagesSavedCount, sb, outputFileName);
                 }
             }
+            return true;
         }
     }
 }
